--- a/src/main/asciidoc/index.adoc
+++ b/src/main/asciidoc/index.adoc
@@ -30,6 +30,7 @@ include::{spring-data-commons-docs}/repositories.adoc[leveloffset=+1]
 
 include::reference/introduction.adoc[leveloffset=+1]
 include::reference/mongodb.adoc[leveloffset=+1]
+include::reference/client-session-transactions.adoc[leveloffset=+1]
 include::reference/reactive-mongodb.adoc[leveloffset=+1]
 include::reference/mongo-repositories.adoc[leveloffset=+1]
 include::reference/reactive-mongo-repositories.adoc[leveloffset=+1]
