--- a/src/main/asciidoc/reference/mongodb.adoc
+++ b/src/main/asciidoc/reference/mongodb.adoc
@@ -2095,6 +2095,7 @@ The MongoDB Aggregation Framework provides the following types of aggregation op
 * Array Aggregation Operators
 * Conditional Aggregation Operators
 * Lookup Aggregation Operators
+* Convert Aggregation Operators
 
 At the time of this writing, we provide support for the following Aggregation Operations in Spring Data MongoDB:
 
@@ -2137,6 +2138,8 @@ At the time of this writing, we provide support for the following Aggregation Op
 | Type Aggregation Operators
 | `type`
 
+| Convert Aggregation Operators
+| `convert`, `toBool`, `toDate`, `toDecimal`, `toDouble`, `toInt`, `toLong`, `toObjectId`, `toString`
 |===
 
 * The operation is mapped or added by Spring Data MongoDB.
