--- a/src/main/asciidoc/reference/mongodb.adoc
+++ b/src/main/asciidoc/reference/mongodb.adoc
@@ -2100,6 +2100,7 @@ The MongoDB Aggregation Framework provides the following types of aggregation op
 * Conditional Aggregation Operators
 * Lookup Aggregation Operators
 * Convert Aggregation Operators
+* Object Aggregation Operators
 
 At the time of this writing, we provide support for the following Aggregation Operations in Spring Data MongoDB:
 
@@ -2144,6 +2145,9 @@ At the time of this writing, we provide support for the following Aggregation Op
 
 | Convert Aggregation Operators
 | `convert`, `toBool`, `toDate`, `toDecimal`, `toDouble`, `toInt`, `toLong`, `toObjectId`, `toString`
+
+| Object Aggregation Operators
+| `mergeObjects`
 |===
 
 * The operation is mapped or added by Spring Data MongoDB.
