--- a/src/main/asciidoc/reference/mongodb.adoc
+++ b/src/main/asciidoc/reference/mongodb.adoc
@@ -2128,7 +2128,7 @@ At the time of this writing, we provide support for the following Aggregation Op
 | `eq` (*via: `is`), `gt`, `gte`, `lt`, `lte`, `ne`
 
 | Array Aggregation Operators
-| `arrayElementAt`, `concatArrays`, `filter`, `in`, `indexOfArray`, `isArray`, `range`, `reverseArray`, `reduce`, `size`, `slice`, `zip`
+| `arrayElementAt`, `arrayToObject`, `concatArrays`, `filter`, `in`, `indexOfArray`, `isArray`, `range`, `reverseArray`, `reduce`, `size`, `slice`, `zip`
 
 | Literal Operators
 | `literal`
@@ -2149,7 +2149,7 @@ At the time of this writing, we provide support for the following Aggregation Op
 | `convert`, `toBool`, `toDate`, `toDecimal`, `toDouble`, `toInt`, `toLong`, `toObjectId`, `toString`
 
 | Object Aggregation Operators
-| `mergeObjects`
+| `objectToArray`, `mergeObjects`
 |===
 
 * The operation is mapped or added by Spring Data MongoDB.
