--- a/src/main/asciidoc/reference/mongodb.adoc
+++ b/src/main/asciidoc/reference/mongodb.adoc
@@ -2147,7 +2147,7 @@ At the time of this writing, we provide support for the following Aggregation Op
 | `convert`, `toBool`, `toDate`, `toDecimal`, `toDouble`, `toInt`, `toLong`, `toObjectId`, `toString`
 
 | Object Aggregation Operators
-| `mergeObjects`
+| `objectToArray`, `mergeObjects`
 |===
 
 * The operation is mapped or added by Spring Data MongoDB.
