DATAMONGO-2059 - Fix document count for geo queries inside a MongoDB Session.
We transform queries using $near or $nearSphere to use $geoWithin when issuing count operations inside a MongoDB Session. This allows us to work around limitations on the $match aggregation operation.

--- a/src/main/asciidoc/reference/client-session-transactions.adoc
+++ b/src/main/asciidoc/reference/client-session-transactions.adoc
@@ -357,3 +357,6 @@ instead of:
 db.collection.find( { state: "active" } ).count()
 ----
 ====
+
+WARNING: Not all operators are supported by the `$match` aggregation state. We highly recommend to check the
+https://docs.mongodb.com/manual/reference/operator/aggregation/match/#restrictions[restrictions].
